# Projet-Prog_Con

./: CMakeLists.txt
Doc/: Plan pre.gan  Plan re.gan
Livrables_Finaux_/Database/: Script.sql
Livrables_Finaux_/Diagrammes/Activity/: Activity Diagram Service de plats et Gestions des demandes clients (serveurs et commis de salle)
Pools/: resourcePool.cpp  resourcePool.h  threadPool.h  threadpool.cpp
src/: CMakeLists.txt  MCD.drawio  main.cpp  mysql.h  reset_database.sh  resources.qrc
src/Controller/: Controller.cpp  Controller.h  controlleurChefDeRang.cpp  controlleurChefDeRang.h  controlleurCuisinier.cpp  controlleurCuisinier.h  controlleurMaitreHotel.cpp  controlleurMaitreHotel.h  controlleurPlongeur.cpp  controlleurPlongeur.h  controlleurServeur.cpp  controlleurServeur.h  controlleurStock.cpp  controlleurStock.h  port_manager.cpp  port_manager.h
src/Model/: Client.cpp  Client.h  Commande.cpp  Commande.h  ComptoirSocket.cpp  ComptoirSocket.h  EtapeRecette.cpp  EtapeRecette.h  Ingredient.cpp  Ingredient.h  Plat.cpp  Plat.h  Recette.h  assiette.h  carte_restaurant.h  chefDeCuisine.cpp  chefDeCuisine.h  chefDeRang.cpp  chefDeRang.h  client.cpp  client.h  commis.cpp  commis.h  cuisinier.cpp  cuisinier.h  dressage.h  maitreHotel.cpp  maitreHotel.h  plongeur.cpp  plongeur.h  ressourceGestion.cpp  ressourceGestion.h  serveur.cpp  serveur.h  serviceManager.cpp  serviceManager.h  stockGestion.cpp  stockGestion.h  table.h  utils.cpp  (+1 more)
src/Tests/: Test.cpp  testChefDeRang.cpp  testCuisinier.cpp  testMaitreHotel.cpp  testPlongeur.cpp  testServeur.cpp  testStockGestion.cpp
src/Tests_/: Test.cpp  testChefDeCuisine.cpp  testChefDeRang.cpp  testClient.cpp  testCommis.cpp  testCuisinier.cpp  testEtapeRecette.cpp  testRessourcesGestion.cpp  testServiceManager.cpp  testUtils.cpp
src/View/: Affichage.cpp  Affichage.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  vueChefDeRang.cpp  vueChefDeRang.h  vueCuisinier.cpp  vueCuisinier.h  vueMaitreHotel.cpp  vueMaitreHotel.h  vuePlongeur.cpp  vuePlongeur.h  vueServeur.cpp  vueServeur.h  vueStock.cpp  vueStock.h
src/ipc/: ipc_utils.cpp  ipc_utils.h
